examples/test/testpolicy2614.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2614
  namespace: namespace227
spec:
  podSelector:
    matchLabels:
      key28: value2
      key11: value17
      key6: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value45
      podSelector:
        matchLabels:
          key41: value0
          key19: value39
          key1: value10
